# chanteybase-js

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  bower.json  karma.conf.js  package-lock.json  package.json
app/: app.config.js  app.js  index-async.html  index.html
app/collections/: collections.component.js  collections.module.js  collections.spec.js  collections.template.html
app/songs/: songs.component.js  songs.module.js  songs.spec.js  songs.template.html
data/: person.json  templates.json
data/chantey/: SONGSOFA.1964.json  colcord.1964.json
e2e-tests/: scenarios.js
gosrc/: BUILD  BUILD.bazel  WORKSPACE  build_it  chanteys.db  clean  clean_pg.sql  db  do_it  go.mod  go.sum  lint  main.go  run  runpg  runserver  test
gosrc/actions/: BUILD.bazel  chantey.go  collection.go  go.mod  path.go  person.go  spec.go  util.go
gosrc/config/: chantey.json  collection.json  collector.json  config.json
gosrc/data/: chantey.json  collection.json  person.json
gosrc/data/chantey/: SONGSOFA.1964.json
gosrc/models/: BUILD.bazel  chantey.go  chantey_query.go  collection.go  collection_query.go  collector.go  go.mod  model.go  model_registry.go  person.go  person_query.go  spec.go  util.go
mithril/: package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
mithril/src/: index.js
mithril/src/components/: footer.js  header.js
mithril/src/pages/: default-layout.js  home-page.js  person-page.js  routes.js  urls.js  (+1 more)
rustsrc/chanteybase/: Cargo.toml
rustsrc/chanteybase-srv/: BUILD.bazel  Cargo.toml
rustsrc/chanteybase-srv/src/: data.rs  main.rs
svelte/: package-lock.json  package.json
svelte/src/: App.svelte
(+6 files in other folders)
