load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chantey.go",
        "collection.go",
        "person.go",
        "util.go",
    ],
    importpath = "github.com/wingerjc/chanteybase-js/go/actions",
    visibility = ["//visibility:public"],
    deps = ["@com_github_jmoiron_sqlx//:go_default_library"],
)
